# pygskin

./: .gitignore  LICENSE.md  README.md  pyproject.toml  ray_first_meeting.yaml  requirements.txt  setup.py
.github/workflows/: doctests.yml  publish-documentation.yaml  python-publish.yml
examples/: camera.py  customizable_controls.py  dialogue.py  imgui_demo.py  quickstart.py  screen_manager.py  shake.py  sprite_stack.py  spritesheet_animate.py
examples/assets/: ray_first_meeting.yaml
examples/asteroids/: __main__.py
examples/conway_life/: __main__.py
examples/dialogue/: __main__.py  point_and_click.py
examples/dialogue/assets/: ray_first_meeting.yaml
examples/gui/: __main__.py
examples/snake/: __main__.py  snake.py
examples/tetris/: __main__.py
pygskin/: __init__.py  animation.py  assets.py  camera.py  clock.py  dialogue.py  direction.py  display.py  easing.py  ecs.py  events.py  func.py  game.py  gradient.py  grid.py  gui.py  hash.py  imgui.py  input.py  interfaces.py  layout.py  lazy.py  lazy_image.py  music.py  parallax.py  particles.py  pubsub.py  rect.py  screen.py  sfx.py  shake.py  sparse_array.py  spritesheet.py  spritestack.py  state_machine.py  statemachine.py  statemachine_coro.py  stylesheet.py  surface.py  text.py  (+5 more)
pygskin/ecs/: __init__.py
pygskin/ecs/components/: __init__.py  event.py  tick.py
pygskin/ecs/systems/: __init__.py  display.py  event.py  tick.py
